<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="title_activity_base">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="warning">Across the Great Wall, we can reach every corner in the world.</string>
    <string name="share_text">Share</string>
    <string name="share_text_full">I have finished %d push up.</string>
    <string name="share_text_full_total">I have totally finished %d push up.</string>
    <string name="start">START</string>
    <string name="wrist">WRIST</string>
    <string name="how_many_days">%d days</string>
    <string name="pushups">pushups</string>

    <string name="signing_in">Signing in with Google</string>
    <string name="signing_out">Signing out</string>
    <string name="sign_in_explanation">Sign with Google to upload your achievements and share with friends.</string>
    <string name="you_are_signed_in">You are signed in with Google.</string>
    <string name="you_are_signed_in_as">You are signed in as %s with Google.</string>
    <string name="sign_out">Sign Out</string>
    <string name="click_me">Click me!</string>
    <string name="victory">Victory</string>
    <string name="you_won">OK! You won!</string>
    <string name="achievements_not_available">Please sign in to view achievements.</string>
    <string name="leaderboards_not_available">Please sign in to view leaderboards.</string>
    <string name="invitation_not_available">Please sign in to view invitations.</string>
    <string name="Archievement">Archievements</string>
    <string name="LeaderBoard">Leaderboards</string>


    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="about_url">http://www.pooshup.com</string>
    <string name="menu_item_dashboard">Dashboard</string>
    <string name="menu_item_pushup">Pushups</string>
    <string name="menu_item_multi">Multi-Player(Lan)</string>
    <string name="menu_item_wrist">Wrist Exercises</string>
    <string name="menu_item_leaderboard">Leaderboard</string>
    <string name="menu_item_archievement">Archievement</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_google">Google+</string>
    <string name="menu_item_helper">Helper</string>
    <string name="action_share">Share</string>
    <!--
    <string name="total_times_per_count">%s times, %s pushups per time </string>
    -->
    <string name="total_times">Total %d times</string>
    <string name="pushups_per_time"> %d pushups/time</string>
    <string name="press_again_to_exit">Press Back-Key again to exit.</string>
    <string name="invitation">Invitations</string>
    <string name="lan_tips">(Beta Version)Please make sure your friends are in the same lan network, then you can find each other to PK.</string>
    <string name="search_friends_text">Find Friends</string>
    <string name="start_search_friends">Start searching your friends, please wait...</string>
    <string name="send_to_wechat">Send to WeChat</string>
    <string name="share_to_friends">Send to friends</string>
    <string name="share_to_moments">Send to moments</string>
    <string name="share_to_weixin">Share to WeChat</string>
    <string name="app_detail">Pooshup is a simple application used to do pushups.It won\n\n  * the AngelHack Shanghai 2013\n  * the StartupWeekend Shanghai 2013 \n  * the hottest booth of TechCrunch Shanghai 2013 \n\nThe Android version is developed by pengjianqing@gmail.com \n\nPlease visit the official web site to get more information.</string>
    <string name="app_url">http://www.pooshup.com</string>

    <string-array name="drawer_items_array">
        <item>@string/menu_item_dashboard</item>
        <item>@string/menu_item_pushup</item>
        <item>@string/menu_item_multi</item>
        <item>@string/menu_item_wrist</item>
        <item>@string/menu_item_google</item>
        <item>@string/menu_item_leaderboard</item>
        <item>@string/menu_item_archievement</item>
        <item>@string/menu_item_helper</item>
        <item>@string/menu_item_about</item>
    </string-array>

</resources>
