<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (C) 2013 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              style="@style/MainLayout"
              tools:context=".MainActivity">

    <include
        android:id="@+id/titleIndicatorLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/title_bar"
        />

    <!-- MAIN DISPLAY -->
    <LinearLayout
        style="@style/MainDisplay"
        android:layout_marginTop="0dip">


        <Button
            android:id="@+id/button_leaderboard"
            android:text="@string/LeaderBoard"
            android:layout_width="fill_parent"
            android:layout_marginTop="0dip"
            android:layout_weight="1.0"
            style="@style/LeaderboardButton"/>

        <View
            android:background="@color/bg_color_divider"
            android:layout_width="fill_parent"
            android:layout_height="2px"
            ></View>

        <Button
            android:id="@+id/button_archievement"
            android:text="@string/Archievement"
            android:layout_width="fill_parent"
            android:layout_weight="1.0"
            style="@style/LeaderboardButton"/>


        <View
            android:background="@color/bg_color_divider"
            android:layout_width="fill_parent"
            android:layout_height="2px"
            ></View>

        <Button
            android:id="@+id/button_invitation"
            android:text="@string/invitation"
            android:layout_width="fill_parent"
            android:layout_marginTop="0dip"
            android:layout_weight="1.0"
            style="@style/LeaderboardButton"/>
    </LinearLayout>

    <!-- SIGN-IN BAR -->
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/sign_in_bar"
        style="@style/SignInOutBar">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/button_sign_in"
            style="@style/SignInButton"/>

        <TextView
            style="@style/SignInOutBarBlurb"
            android:text="@string/sign_in_explanation"/>
    </LinearLayout>

    <!-- SIGN-OUT BAR -->
    <LinearLayout
        android:id="@+id/sign_out_bar"
        style="@style/SignInOutBar"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:background="@drawable/google_plus_logo"
            ></ImageView>

        <TextView
            android:id="@+id/user_info"
            style="@style/SignInOutBarBlurb"
            android:text="@string/you_are_signed_in"/>

        <Button
            style="@style/SignOutButton"
            android:id="@+id/button_sign_out"
            android:text="@string/sign_out"/>
    </LinearLayout>

</LinearLayout>
