<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

    <include
        android:id="@+id/titleIndicatorLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/title_bar"
        />

    <View
        android:id="@+id/center_line"
        android:layout_height="0dip"
        android:layout_width="fill_parent"
        android:layout_centerVertical="true"
        ></View>

    <RelativeLayout
        android:id="@+id/total_text_layout"
        android:layout_below="@id/titleIndicatorLayout"
        android:layout_height="55dip"
        android:layout_marginTop="15dip"
        android:layout_width="fill_parent">

        <TextView
            android:layout_centerHorizontal="true"
            android:id="@+id/total_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/JustPushUpTextStyle"
            android:textColor="@color/blue"
            android:text="0"
            android:layout_alignParentBottom="true"
            />

        <TextView
            android:id="@+id/days"
            android:layout_toLeftOf="@id/total_text"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            style="@style/DetailInfoTextStyle"
            android:gravity="right"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="20dip"
            android:text="@string/how_many_days"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailInfoTextStyle"
            android:layout_toRightOf="@id/total_text"
            android:gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dip"
            android:text="@string/pushups"
            />
    </RelativeLayout>

    <RelativeLayout
        android:visibility="visible"
        android:id="@+id/detail_info_layout"
        android:layout_height="15dip"
        android:layout_below="@id/total_text_layout"
        android:layout_width="fill_parent">

        <View
            android:id="@+id/center_detail"
            android:layout_centerHorizontal="true"
            android:layout_height="fill_parent"
            android:layout_width="1dip"></View>


        <TextView
            android:layout_toRightOf="@id/center_detail"
            android:layout_marginLeft="50dip"
            android:id="@+id/duration_time"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/DetailInfoTextStyle"
            android:text="01:58"
            android:visibility="invisible"
            />


        <TextView
            android:id="@+id/level"
            android:layout_toLeftOf="@id/center_detail"
            android:layout_below="@id/days"
            android:layout_marginTop="10dip"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            style="@style/DetailInfoTextStyle"
            android:text="Level Master"
            android:visibility="invisible"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/start_button"
        android:layout_below="@id/detail_info_layout"
        android:layout_centerInParent="true"
        android:layout_marginBottom="5dip"
        android:layout_centerHorizontal="true"
        android:layout_height="150dip"
        android:layout_width="150dip"
        android:text="@string/start"
        style="@style/StartTextStyle"
        android:gravity="center"
        android:background="@drawable/blue_circle"
        ></TextView>

    <LinearLayout
        android:layout_below="@id/start_button"
        android:layout_width="fill_parent"
        android:layout_height="50dip">

        <TextView
            android:layout_weight="1.0"
            android:id="@+id/wrist_button"
            android:layout_below="@id/detail_info_layout"
            android:layout_centerInParent="true"
            android:layout_marginBottom="5dip"
            android:layout_centerHorizontal="true"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:text="@string/wrist"
            style="@style/TwistTextStyle"
            android:gravity="center"
            android:background="@android:color/holo_green_dark"
            ></TextView>

        <TextView
            android:layout_weight="1.0"
            android:id="@+id/other_button"
            android:layout_below="@id/detail_info_layout"
            android:layout_centerInParent="true"
            android:layout_marginBottom="5dip"
            android:layout_centerHorizontal="true"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:text="@string/wrist"
            style="@style/TwistTextStyle"
            android:gravity="center"
            android:background="@android:color/holo_orange_dark"
            ></TextView>

    </LinearLayout>

    <TextView
        android:id="@+id/pushup_text"
        android:layout_below="@id/center_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_centerHorizontal="true"
        style="@style/JustPushUpTextStyle"
        android:background="@drawable/pushup_logo"
        android:visibility="gone"
        />

    <ScrollView
        android:layout_below="@id/pushup_text"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:visibility="gone"
        >

        <TextView
            android:padding="10dip"
            android:id="@+id/result_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            style="@style/InfoTextStyle"
            android:visibility="invisible"
            />
    </ScrollView>
</RelativeLayout>
